# tool_demo

./: .gitignore  Cargo.toml
func_builder/: Cargo.toml
func_builder/src/: lib.rs
src/: helpers.rs  lib.rs  llm_output.rs  main copy.rs  main.rs  struct_call.rs  tool_complex.rs
