[package]
name = "tool_demo"
version = "0.1.0"
edition = "2021"


[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0.89"
async-trait = "0.1.82"
once_cell = "1.19.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.128"
inventory = "0.3"
lazy_static = "1.5.0"
paste = "1.0"
convert_case = "0.6.0"
sha2 = "0.10"
hex = "0.4"
